Fix Overflow on Slideshow Component

--- a/src/components/Homepage/Slideshow.module.css
+++ b/src/components/Homepage/Slideshow.module.css
@@ -130,7 +130,6 @@
   top: 70%;
   left: 50%;
   width: 100%;
-  padding: 1rem 2rem;
   text-align: center;
   z-index: 2;
   transform: translate(-50%, -50%);
